--- a/src/Components/Styles/Projects.css
+++ b/src/Components/Styles/Projects.css
@@ -1,4 +1,5 @@
 .projects-container {
+  padding-top: 50px;
   height: auto;
   border-radius: 20px;
   gap:20px;
@@ -106,5 +107,6 @@
   .project-img,
   .project-img-2{
     width: auto;
+    min-width: 200px;
   }
 }
