--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -2,8 +2,9 @@
 .navBar {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end; 
+    justify-content: center; 
      width: 100%;
+     height: 70px;
      background-color: white;
      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
     z-index: 1;
@@ -14,6 +15,8 @@
     text-decoration: none;
     color: black;
     padding: 20px;
+    font-size: 25px;
+    align-items: center;
     font-weight: bolder;
     display: block; 
     cursor: pointer;
