--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -21,7 +21,23 @@
     display: block; 
     cursor: pointer;
   }
-  
+  .navBar a::before{
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: black;
+  border-radius: 5px;
+  transform: scaleX(0);
+  transition: all 0.6s ease;
+  }
+  .navBar a::before{
+    bottom:0;
+    left:0;
+  }
+  .navBar a:hover::before{
+    transform: scaleX(1);
+  }
   .navBar a:hover {
     color: blue;
   }
